# aristotle-virtue-graph

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/: .env.example  .gitignore  README.md  pyproject.toml
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/configs/: base.yaml  smoke.yaml
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/docs/execplans/: aristotle-virtue-graph.md
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/outputs/runs/seed_17/: config_snapshot.json  final_prompts.json  runtime_metadata.json  split_paths.json  state.json
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/outputs/runs/seed_17/data/: access_log.jsonl  label_semantics.json  split_summary.json
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/outputs/runs/seed_17/final_evaluation/: statistics.json
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/outputs/runs/seed_17/prompt_versions/: teacher_multi_round_iterative_prompt.txt  teacher_single_rewrite_prompt.txt
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/outputs/runs/seed_17/selector_dev/: iterative_rounds.json
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/outputs/runs/seed_17/teacher_outputs/: single_rewrite.json
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/outputs/runs/smoke_seed_101/: config_snapshot.json  environment.json  final_prompts.json  runtime_metadata.json  split_paths.json  state.json
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/outputs/runs/smoke_seed_101/data/: access_log.jsonl  label_semantics.json  split_summary.json
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/outputs/runs/smoke_seed_101/final_evaluation/: statistics.json
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/outputs/runs/smoke_seed_101/selector_dev/: iterative_rounds.json
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/prompts/: teacher_revision_prompt.md
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/reports/: final_report.md
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/scripts/: generate_report.py  prepare_data.py  run_experiment.py  run_final_evaluation.py  run_multiseed.py  run_smoke.py
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/src/ethics_prompt_rewrite/: __init__.py  adaptation.py  config.py  data.py  evaluation.py  models.py  pipeline.py  prompts.py  reporting.py  run_state.py  stats.py  student.py  teacher.py  utils.py
Teacher_Student_Moral/ethics_iterative_prompt_rewriting_experiment/tests/: test_parser.py  test_split_integrity.py  test_teacher.py
(+120 files in other folders)
